# Autonet-2019---Team-Robosapiens

./: README.MD
Microcontroller/PIDreg/: PIDreg.ino
Microcontroller/RightPID/: PIDreg.ino
Microcontroller/sketch_mar10a/: sketch_mar10a.ino
Projects/: arduino.sldprt  battery.sldprt  converter.sldprt  driver.sldprt  long detail.SLDPRT  rotating thing.SLDPRT  Второй этаж.sldprt  Камера1.sldprt  Камера2.sldprt  Камера3.sldprt  Колесо.sldprt  Корпус.sldprt  Малина.sldprt  Подшипник М5.sldprt  Робот.SLDASM  Серво.sldprt  Стойка.SLDPRT  коемка для подшипника.SLDPRT  подшипник.sldprt
Projects/details for cutting/: All_cutting_details.bak  korpus.dwg  vtoroy_etazh.dwg
Projects/details to print/: assembly2.SLDASM
Projects/детали на печать/: Вращающаясяпиздота.sldprt
Projects/детали на резку/: All_cutting_details.dwg  planka (1).dwg
separate_modules/: ABOUT.MD  about_cam  auxiliary_functions.py  hsv_mask.py  lines.py  settings.py  signs.py  traffic_light.py  vision_module.py
source/: control.sh  make_and_run.sh  run.launch  run.sh  vision.sh
source/devel/: .catkin  .rosinstall  setup.sh
source/devel/include/vision_info_msg/: vision_info_msg.h
source/devel/lib/control/: control
source/devel/lib/pkgconfig/: Control.pc  control.pc  vision_info_msg.pc  vision_module.pc
source/src/Control/: CMakeLists.txt  package.xml
source/src/control/: CMakeLists.txt  package.xml
source/src/vision_info_msg/: CMakeLists.txt  package.xml
source/src/vision_info_msg/msg/: vision_info_msg.msg
source/src/vision_module/: CMakeLists.txt
(+20 files in other folders)
