<?xml version="1.0"?>
<package format="2">
  <name>vision_info_msg</name>
  <version>0.0.0</version>
  <description>The vision_info_msg package</description>


  <maintainer email="Robosapiens@todo.todo">Robo sapiens</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>


  </export>
</package>
